--- a/change.html
+++ b/change.html
@@ -145,7 +145,7 @@
 		<img class='clicked person' src="fbx/image/person.png" id="personId">
 
 		<div id="allId">
-			<a href="https://v.youku.com/v_show/id_XNTE5OTAzMTU4MA==.html?s=bfaf1479f2204f84b80e&scm=20140719.manual.15319.show_bfaf1479f2204f84b80e&spm=a2ha1.14919748_WEBHOME_GRAY.drawer2.d_zj1_1&s=bfaf1479f2204f84b80e"
+			<a href="https://youtu.be/2eU51rKhn3I"
 				target="blank">
 				<img class='clicked done' src="fbx/image/done.png">
 			</a>
